--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -308,8 +308,8 @@ header .container #overlay {
 }
 
 .banner-text h1 {
-  line-height: 1;
   letter-spacing: var(--spacing-xs);
+  margin-bottom: var(--spacing-xs);
 }
 
 .banner-text h1 span {
@@ -818,8 +818,7 @@ form button {
 @media (width <= 1024px) {
   #contact .container {
     gap: 3rem;
-    grid-template:
-      "title" auto "text" auto "form" auto / 1fr;
+    grid-template: "title" auto "text" auto "form" auto / 1fr;
   }
 }
 
