--- a/assets/css/preflight.css
+++ b/assets/css/preflight.css
@@ -1,3 +1,4 @@
+/* stylelint-disable font-family-no-missing-generic-family-keyword */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 
 body {
@@ -8,13 +9,13 @@ body {
 h1 {
   font-size: var(--font-size-4);
   font-weight: 700;
-  line-height: 2;
+  line-height: 0;
 }
 
 h2 {
   font-size: var(--font-size-3);
   font-weight: 600;
-  line-height: 2;
+  line-height: 0;
 }
 
 h3 {
@@ -29,7 +30,7 @@ h4 {
 
 p {
   font-size: var(--font-size-0);
-  line-height: var(--spacing-m);
+  line-height: 1.5;
 }
 
 main > section:not(:first-child) {
